sparql10/target/generated-sources/antlr4/com/semantalytics/antlr/grammar/sparql/sparql10/Sparql10Parser.java
// Generated from com/semantalytics/antlr/grammar/sparql/sparql10/Sparql10Parser.g4 by ANTLR 4.7.2
package com.semantalytics.antlr.grammar.sparql.sparql10;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Sparql10Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BASE=1, SELECT=2, ORDER=3, BY=4, FROM=5, GRAPH=6, STR=7, ISURI=8, PREFIX=9, 
		CONSTRUCT=10, LIMIT=11, ASC=12, DESC=13, NAMED=14, OPTIONAL=15, LANG=16, 
		ISIRI=17, DESCRIBE=18, OFFSET=19, WHERE=20, UNION=21, LANGMATCHES=22, 
		ISLITERAL=23, ASK=24, DISTINCT=25, FILTER=26, DATATYPE=27, REGEX=28, REDUCED=29, 
		A=30, BOUND=31, TRUE=32, SAMETERM=33, FALSE=34, AS=35, ISBLANK=36, COMMENT=37, 
		ASTERISK=38, DOT=39, OPEN_CURLY_BRACE=40, CLOSE_CURLY_BRACE=41, SEMICOLON=42, 
		COMMA=43, OPEN_BRACE=44, CLOSE_BRACE=45, OPEN_SQUARE_BRACE=46, CLOSE_SQUARE_BRACE=47, 
		LESS_EQUAL=48, GREATER_EQUAL=49, NOT_EQUAL=50, NOT_SIGN=51, DIVIDE=52, 
		EQUAL=53, LESS=54, GREATER=55, PLUS=56, MINUS=57, AND=58, OR=59, REFERENCE=60, 
		IRI_REF=61, PNAME_NS=62, PNAME_LN=63, BLANK_NODE_LABEL=64, VAR1=65, VAR2=66, 
		LANGTAG=67, INTEGER=68, DECIMAL=69, DOUBLE=70, INTEGER_POSITIVE=71, DECIMAL_POSITIVE=72, 
		DOUBLE_POSITIVE=73, INTEGER_NEGATIVE=74, DECIMAL_NEGATIVE=75, DOUBLE_NEGATIVE=76, 
		EXPONENT=77, STRING_LITERAL1=78, STRING_LITERAL2=79, STRING_LITERAL_LONG1=80, 
		STRING_LITERAL_LONG2=81, ECHAR=82, NIL=83, WS=84, ANON=85, PN_CHARS_BASE=86, 
		PN_CHARS_U=87, VARNAME=88, PN_CHARS=89, PN_PREFIX=90, PN_LOCAL=91;
	public static final int
		RULE_query = 0, RULE_prologue = 1, RULE_baseDecl = 2, RULE_prefixDecl = 3, 
		RULE_selectQuery = 4, RULE_constructQuery = 5, RULE_describeQuery = 6, 
		RULE_askQuery = 7, RULE_datasetClause = 8, RULE_defaultGraphClause = 9, 
		RULE_namedGraphClause = 10, RULE_sourceSelector = 11, RULE_whereClause = 12, 
		RULE_solutionModifier = 13, RULE_limitOffsetClauses = 14, RULE_orderClause = 15, 
		RULE_orderCondition = 16, RULE_limitClause = 17, RULE_offsetClause = 18, 
		RULE_groupGraphPattern = 19, RULE_triplesBlock = 20, RULE_graphPatternNotTriples = 21, 
		RULE_optionalGraphPattern = 22, RULE_graphGraphPattern = 23, RULE_groupOrUnionGraphPattern = 24, 
		RULE_filter = 25, RULE_constraint = 26, RULE_functionCall = 27, RULE_argList = 28, 
		RULE_constructTemplate = 29, RULE_constructTriples = 30, RULE_triplesSameSubject = 31, 
		RULE_propertyListNotEmpty = 32, RULE_propertyList = 33, RULE_objectList = 34, 
		RULE_object = 35, RULE_verb = 36, RULE_triplesNode = 37, RULE_blankNodePropertyList = 38, 
		RULE_collection = 39, RULE_graphNode = 40, RULE_varOrTerm = 41, RULE_varOrIRIref = 42, 
		RULE_var = 43, RULE_graphTerm = 44, RULE_expression = 45, RULE_conditionalOrExpression = 46, 
		RULE_conditionalAndExpression = 47, RULE_valueLogical = 48, RULE_relationalExpression = 49, 
		RULE_numericExpression = 50, RULE_additiveExpression = 51, RULE_multiplicativeExpression = 52, 
		RULE_unaryExpression = 53, RULE_primaryExpression = 54, RULE_brackettedExpression = 55, 
		RULE_builtInCall = 56, RULE_regexExpression = 57, RULE_iriRefOrFunction = 58, 
		RULE_rdfLiteral = 59, RULE_numericLiteral = 60, RULE_numericLiteralUnsigned = 61, 
		RULE_numericLiteralPositive = 62, RULE_numericLiteralNegative = 63, RULE_booleanLiteral = 64, 
		RULE_string = 65, RULE_iriRef = 66, RULE_prefixedName = 67, RULE_blankNode = 68;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "prologue", "baseDecl", "prefixDecl", "selectQuery", "constructQuery", 
			"describeQuery", "askQuery", "datasetClause", "defaultGraphClause", "namedGraphClause", 
			"sourceSelector", "whereClause", "solutionModifier", "limitOffsetClauses", 
			"orderClause", "orderCondition", "limitClause", "offsetClause", "groupGraphPattern", 
			"triplesBlock", "graphPatternNotTriples", "optionalGraphPattern", "graphGraphPattern", 
			"groupOrUnionGraphPattern", "filter", "constraint", "functionCall", "argList", 
			"constructTemplate", "constructTriples", "triplesSameSubject", "propertyListNotEmpty", 
			"propertyList", "objectList", "object", "verb", "triplesNode", "blankNodePropertyList", 
			"collection", "graphNode", "varOrTerm", "varOrIRIref", "var", "graphTerm", 
			"expression", "conditionalOrExpression", "conditionalAndExpression", 
			"valueLogical", "relationalExpression", "numericExpression", "additiveExpression", 
			"multiplicativeExpression", "unaryExpression", "primaryExpression", "brackettedExpression", 
			"builtInCall", "regexExpression", "iriRefOrFunction", "rdfLiteral", "numericLiteral", 
			"numericLiteralUnsigned", "numericLiteralPositive", "numericLiteralNegative", 
			"booleanLiteral", "string", "iriRef", "prefixedName", "blankNode"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'*'", "'.'", "'{'", "'}'", "';'", "','", "'('", "')'", "'['", 
			"']'", "'<='", "'>='", "'!='", "'!'", "'/'", "'='", "'<'", "'>'", "'+'", 
			"'-'", "'&&'", "'||'", "'^^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BASE", "SELECT", "ORDER", "BY", "FROM", "GRAPH", "STR", "ISURI", 
			"PREFIX", "CONSTRUCT", "LIMIT", "ASC", "DESC", "NAMED", "OPTIONAL", "LANG", 
			"ISIRI", "DESCRIBE", "OFFSET", "WHERE", "UNION", "LANGMATCHES", "ISLITERAL", 
			"ASK", "DISTINCT", "FILTER", "DATATYPE", "REGEX", "REDUCED", "A", "BOUND", 
			"TRUE", "SAMETERM", "FALSE", "AS", "ISBLANK", "COMMENT", "ASTERISK", 
			"DOT", "OPEN_CURLY_BRACE", "CLOSE_CURLY_BRACE", "SEMICOLON", "COMMA", 
			"OPEN_BRACE", "CLOSE_BRACE", "OPEN_SQUARE_BRACE", "CLOSE_SQUARE_BRACE", 
			"LESS_EQUAL", "GREATER_EQUAL", "NOT_EQUAL", "NOT_SIGN", "DIVIDE", "EQUAL", 
			"LESS", "GREATER", "PLUS", "MINUS", "AND", "OR", "REFERENCE", "IRI_REF", 
			"PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", "VAR1", "VAR2", "LANGTAG", 
			"INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", 
			"DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", 
			"EXPONENT", "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", 
			"STRING_LITERAL_LONG2", "ECHAR", "NIL", "WS", "ANON", "PN_CHARS_BASE", 
			"PN_CHARS_U", "VARNAME", "PN_CHARS", "PN_PREFIX", "PN_LOCAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sparql10Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Sparql10Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public PrologueContext prologue() {
			return getRuleContext(PrologueContext.class,0);
		}
		public SelectQueryContext selectQuery() {
			return getRuleContext(SelectQueryContext.class,0);
		}
		public ConstructQueryContext constructQuery() {
			return getRuleContext(ConstructQueryContext.class,0);
		}
		public DescribeQueryContext describeQuery() {
			return getRuleContext(DescribeQueryContext.class,0);
		}
		public AskQueryContext askQuery() {
			return getRuleContext(AskQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			prologue();
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
				{
				setState(139);
				selectQuery();
				}
				break;
			case CONSTRUCT:
				{
				setState(140);
				constructQuery();
				}
				break;
			case DESCRIBE:
				{
				setState(141);
				describeQuery();
				}
				break;
			case ASK:
				{
				setState(142);
				askQuery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologueContext extends ParserRuleContext {
		public BaseDeclContext baseDecl() {
			return getRuleContext(BaseDeclContext.class,0);
		}
		public List<PrefixDeclContext> prefixDecl() {
			return getRuleContexts(PrefixDeclContext.class);
		}
		public PrefixDeclContext prefixDecl(int i) {
			return getRuleContext(PrefixDeclContext.class,i);
		}
		public PrologueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prologue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).enterPrologue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).exitPrologue(this);
		}
	}

	public final PrologueContext prologue() throws RecognitionException {
		PrologueContext _localctx = new PrologueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prologue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BASE) {
				{
				setState(145);
				baseDecl();
				}
			}

			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PREFIX) {
				{
				{
				setState(148);
				prefixDecl();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseDeclContext extends ParserRuleContext {
		public TerminalNode BASE() { return getToken(Sparql10Parser.BASE, 0); }
		public IriRefContext iriRef() {
			return getRuleContext(IriRefContext.class,0);
		}
		public BaseDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).enterBaseDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).exitBaseDecl(this);
		}
	}

	public final BaseDeclContext baseDecl() throws RecognitionException {
		BaseDeclContext _localctx = new BaseDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_baseDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(BASE);
			setState(155);
			iriRef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixDeclContext extends ParserRuleContext {
		public TerminalNode PREFIX() { return getToken(Sparql10Parser.PREFIX, 0); }
		public TerminalNode PNAME_NS() { return getToken(Sparql10Parser.PNAME_NS, 0); }
		public TerminalNode IRI_REF() { return getToken(Sparql10Parser.IRI_REF, 0); }
		public PrefixDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).enterPrefixDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).exitPrefixDecl(this);
		}
	}

	public final PrefixDeclContext prefixDecl() throws RecognitionException {
		PrefixDeclContext _localctx = new PrefixDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_prefixDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(PREFIX);
			setState(158);
			match(PNAME_NS);
			setState(159);
			match(IRI_REF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQueryContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(Sparql10Parser.SELECT, 0); }
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public SolutionModifierContext solutionModifier() {
			return getRuleContext(SolutionModifierContext.class,0);
		}
		public TerminalNode ASTERISK() { return getToken(Sparql10Parser.ASTERISK, 0); }
		public List<DatasetClauseContext> datasetClause() {
			return getRuleContexts(DatasetClauseContext.class);
		}
		public DatasetClauseContext datasetClause(int i) {
			return getRuleContext(DatasetClauseContext.class,i);
		}
		public TerminalNode DISTINCT() { return getToken(Sparql10Parser.DISTINCT, 0); }
		public TerminalNode REDUCED() { return getToken(Sparql10Parser.REDUCED, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public SelectQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).enterSelectQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).exitSelectQuery(this);
		}
	}

	public final SelectQueryContext selectQuery() throws RecognitionException {
		SelectQueryContext _localctx = new SelectQueryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(SELECT);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT || _la==REDUCED) {
				{
				setState(162);
				_la = _input.LA(1);
				if ( !(_la==DISTINCT || _la==REDUCED) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR1:
			case VAR2:
				{
				setState(166); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(165);
					var();
					}
					}
					setState(168); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VAR1 || _la==VAR2 );
				}
				break;
			case ASTERISK:
				{
				setState(170);
				match(ASTERISK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FROM) {
				{
				{
				setState(173);
				datasetClause();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(179);
			whereClause();
			setState(180);
			solutionModifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructQueryContext extends ParserRuleContext {
		public TerminalNode CONSTRUCT() { return getToken(Sparql10Parser.CONSTRUCT, 0); }
		public ConstructTemplateContext constructTemplate() {
			return getRuleContext(ConstructTemplateContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public SolutionModifierContext solutionModifier() {
			return getRuleContext(SolutionModifierContext.class,0);
		}
		public List<DatasetClauseContext> datasetClause() {
			return getRuleContexts(DatasetClauseContext.class);
		}
		public DatasetClauseContext datasetClause(int i) {
			return getRuleContext(DatasetClauseContext.class,i);
		}
		public ConstructQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).enterConstructQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).exitConstructQuery(this);
		}
	}

	public final ConstructQueryContext constructQuery() throws RecognitionException {
		ConstructQueryContext _localctx = new ConstructQueryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constructQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(CONSTRUCT);
			setState(183);
			constructTemplate();
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FROM) {
				{
				{
				setState(184);
				datasetClause();
				}
				}
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(190);
			whereClause();
			setState(191);
			solutionModifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescribeQueryContext extends ParserRuleContext {
		public TerminalNode DESCRIBE() { return getToken(Sparql10Parser.DESCRIBE, 0); }
		public SolutionModifierContext solutionModifier() {
			return getRuleContext(SolutionModifierContext.class,0);
		}
		public TerminalNode ASTERISK() { return getToken(Sparql10Parser.ASTERISK, 0); }
		public List<DatasetClauseContext> datasetClause() {
			return getRuleContexts(DatasetClauseContext.class);
		}
		public DatasetClauseContext datasetClause(int i) {
			return getRuleContext(DatasetClauseContext.class,i);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public List<VarOrIRIrefContext> varOrIRIref() {
			return getRuleContexts(VarOrIRIrefContext.class);
		}
		public VarOrIRIrefContext varOrIRIref(int i) {
			return getRuleContext(VarOrIRIrefContext.class,i);
		}
		public DescribeQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_describeQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).enterDescribeQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Sparql10ParserListener ) ((Sparql10ParserListener)listener).exitDescribeQuery(this);
		}
	}
